--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </button>
       </div>
     </div> 
-    <audio src="./sound/sound.mp3" autoplay></audio>
+   <audio src="./sound/sound.mp3"controls autoplay >
+   </audio>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
